--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,30 @@
-/*h1{
-  color: red
+html{
+  font-family: Verdana;
+  text-align: center;
+  background-color: black;
+  color: white;
+  font-weight: normal;
 }
-*/
+
+h1{
+  font-size: 50px
+}
+
+a.downloadlink{
+  color: aquamarine;
+  font-size: 16px;
+}
+
+h2{
+  font-weight: 300;
+  font-size: 42px;
+}
+
+h3{
+  font-size: 21px;
+  color: gray;
+}
+
+h3.copyright{
+  text-align: right;
+}
